--- a/sarubbo-9/README
+++ b/sarubbo-9/README
@@ -1,8 +1,11 @@
 This shows off-end-of-section
 line table reference in
 
+
 _dwarf_read_line_table_header() 
 libdwarf/./dwarf_line_table_reader_common.c
+
+dwarfdump -a -b -c -d -e -f -F -g -G -i -I -m -M -N -p -P -R -r -s -ta -w -y 3.crashes.bin
 
 Thanks to Agostino Sarubbo for providing this
 testcase.
