Now tests using sarubbo-10.  New baseline executables. 	modified:   DWARFTEST.sh 	modified:   dwarfdump-i386-freebsd.O 	modified:   dwarfdump-i386-ubuntu.O 	modified:   dwarfdump-x86_64-freebsd.O 	modified:   dwarfdump-x86_64-ubuntu.O 	modified:   sarubbo-10/README

--- a/sarubbo-10/README
+++ b/sarubbo-10/README
@@ -17,4 +17,9 @@ is used to identify this situation
 with erroneous frame data.
 
 
+To reproduce  one does
+
+dwarfdump -a -b -c -d -e -f -F -g -G -i -I \
+-m -M -N -p -P -R -r -s -ta -w -y 1.crashes.bin
+
 
