--- a/ChangeLog
+++ b/ChangeLog
@@ -1,37 +1,10 @@
-2017-08-22  David Anderson
-  * dwarfdump-i386-freebsd.O,dwarfdump-x86_64-freebsd.O: The old
+2018-01-29  David Anderson
+  * dwarfdump-i386-freebsd.O,dwarfdump-x86_64-freebsd.O: 
+    New baselines
     FreeBSD 9 versions simply won't run on FreeBSD 11.1.
     So now we start afresh with a new FreeBSD 11.1
     environment.
-  * dwgena/runtest.sh: FreeBSD 11.1 has a one-second-different
-    idea of what ctime(&x) means where x = 0 as compared
-    to Linux. This papers over that irrelevant (to libdwarf) difference.
-2017-05-23  David Anderson
-  Added test with a 'new' relocation seen for the first time.
-  DWARFTEST.sh
-
-  Added words about libelf and naming files with
-  special and interesting characteristics relating
-  to groups.
-    README.txt
-
-  Nothing special, just examples.
-    RUN
-
-  New baselines with Group info present.
-  Should have been in a previous update!
-  debugfission/archivedwo-iMvvv.base.gz
-  debugfission/archivedwo.base.gz
-  debugfission/targetdwo.base.gz
-
-2017-03-24  David Anderson
-  * DWARFTEST.sh: unifyddname now just renames files. No
-    need for sed to remove the .O from the program name
-    dwarfdump prints.  See code/dwarfdump/NEWS or
-    code/dwarfdump/ChangeLog.
-2017-03-22  David Anderson
-  * DWARFTEST.sh: Added tests for marcel directory testcases.
-  * RUNALL.sh: Added code to compute number of minutes wall clock
-    a full test run takes.
+  * sarubbo-11/*.bin: New tests related to reading
+    corrupt frame data. 
 
 
