See README.txt and SHALIAS for hints on running tests where make is not GNU make by default, it's now easier to make such work.         modified:   CHECKIFRUNNING.sh 	modified:   CLEANUP 	modified:   DWARFTEST.sh 	modified:   PICKUPBIN 	modified:   README.txt 	modified:   RUNALL.sh 	new file:   SHALIAS.sh
New baselines, showing new -h output.
	modified:   dwarfdump-i386-freebsd.O
	modified:   dwarfdump-i386-ubuntu.O
	modified:   dwarfdump-x86_64-freebsd.O
	modified:   dwarfdump-x86_64-ubuntu.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2018-09-29  David Anderson
+  * SHALIAS.sh: New. Those with non-GNU make
+    will wish to modify this (see its comments)
+    as the tests do require GNU make.
+  * CHECKIFRUNNING.sh, CLEANUP,DWARFTEST.sh,PICKUPBIN,
+    RUNALL.sh: Now refer to ./SHALIAS.sh so the appropriate
+    alias can be created for make (Useful on non-linux).
+  * README.txt: Some comments about SHALIAS.sh and its use.
 2018-07-28  David Anderson
   * DWARFTEST.sh: Removed unnecessary early report of FAIL count.
   * README.txt: Added mention of specific ulimit commands
