--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-11-05  David Anderson
+   * DWARFTEST.sh:Added test run on big-endian mach-o
+     object macho-kask/dwarfdump_G4.
 2018-10-24  David Anderson
    * macho-kask/README,macho-kask/mach-o-object32,
      macho-kask/mach-o-object32.dSYM/Contents/Resources/DWARF/mach-o-object32,
