--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2019-04-25 David Anderson
+   * PICKUPBIN: Now builds a dwarfdump with --disable-libelf
+     and copies it to the top level for testing as dwarfdumpnl.
+   * nolibelf: Added directory for testing a nolibelf dwarfdump
+     which is named dwarfdumpnl here.
+   * CLEANUP: rm dwarfdumpnl.
+   * DWARFTEST.sh: run nolibelf/runtest.sh
+   * nolibelf:  A directory with the test script and test files.
+   * encisoa: A directory with new test object relating to
+     DW_AT_containing_type use in gcc.
 2019-01-14 David Anderson
    * DWARFTEST.sh: Added comments so it will be easier
      to understand where certain tests are really
