Modify output so it also compares ok on freebsd plus another system with different home directory name. 	modified:   debuglink/runtest.sh
Fix indentation and remove trailing whitespace.
	modified:   test_dwarfnames.c
	modified:   test_harmless.c
New. Determines build host endianness so a test
written for littleendian gets skipped on big endian.
	modified:   testendian.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-09-17 David Anderson
+   * DWARFTEST.sh: Now uses testendian.c
+     to determine test host endianness.
+   * test_dwarfnames.c,test_harmless.c: Indentation
+     fixed and trailing whitespace removed.
+   * testendian.c: New test for test host endianess
+     as at least one test (dwarfextract) was not
+     written to allow anything but little-endian testing.
 2019-04-25 David Anderson
    * PICKUPBIN: Now builds a dwarfdump with --disable-libelf
      and copies it to the top level for testing as dwarfdumpnl.
