Tests ran fine on S390, so here is the new baseline exectuable. 	modified:   dwarfdump-s390.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2020-03-13 David Anderson
+    *  dwarfdump-s390.O: IBM 390 baseline executable.
+2020-03-13 David Anderson
     * CLEANUP: Added a remove of vglog, something created
       by a special test script.
     * DWARFTEST.sh: Now allows for optional suppress-dealloc-tree
