--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2020-03-13 David Anderson
+    * RegressionTestsResults.ods: New. Keeping track
+      of regression test timings. 
+2020-03-13 David Anderson
     *  dwarfdump-s390.O: IBM 390 baseline executable.
 2020-03-13 David Anderson
     * CLEANUP: Added a remove of vglog, something created
