better looking and makes finding leaks easier. 	modified:   DWARFTEST.sh Summary of recent results 	modified:   RegressionTestsResults.ods
New baselines due to a change in one error message content.
	modified:   dwarfdump-i386-freebsd.O
	modified:   dwarfdump-i386-ubuntu.O
	modified:   dwarfdump-x86_64-freebsd.O
	modified:   dwarfdump-x86_64-ubuntu.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,9 +2,11 @@
     * RegressionTestsResults.ods: latest with
       suppres-dealloc and -fsanitize. 
     * DWARFTEST.sh: Now allows for optional suppress-dealloc-tree
-      via "export SUPPRESSTREE=y"
+      via "export SUPPRESSDEALLOCTREE=y"
       And did some cleanup of echo statements for a better
       appearance.
+      To turn on -fsanitize etc, "export NLIZE=y"
+      Both can be turned on.
     * RUNTIMEFILES: Clean up echo stmts for a better appearance. 
 2020-03-13 David Anderson
     * RegressionTestsResults.ods: New. Keeping track
