Now runs the new moya2/filecheck.dwo testcase 	modified:   DWARFTEST.sh
New baselines (that new testcase not fully handled yet)
	modified:   dwarfdump-i386-freebsd.O
	modified:   dwarfdump-i386-ubuntu.O
	modified:   dwarfdump-x86_64-freebsd.O
	modified:   dwarfdump-x86_64-ubuntu.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2020-06-17 David Anderson
+    * moya2/*: New testcase for DWARF5 support.
 2020-03-18 David Anderson
     * RegressionTestsResults.ods: latest with
       suppres-dealloc and -fsanitize. 
