modified:   DWARFTEST.sh  Now with diff --speed-large-files                 (where that option is understood)                 to hopefully speed up big-file diffs with                 small differences. 	modified:   RUNTIMEFILES  Tidying up its reporting.
	modified:   dwarfextract/runtest.sh Now reports, on fail
                how to rerun the test. It's a long
                command.

Baseline updates to match latest dwarfdump
	modified:   baddie1/incorrectatchild.base
	modified:   baddie1/incorrectatitself.base
	modified:   baddie1/incorrectbeforechild.base
	modified:   baddie1/incorrectbeforeitself.base
	modified:   baddie1/incorrectnest.base
	modified:   baddie1/incorrectnest2.base
	modified:   debugfission/archivedwo-iMvvv.base.gz
	modified:   debugfission/archivedwo.base.gz
	modified:   dwarfdump-x86_64-ubuntu.O
	modified:   dwarfextract/test1.base
	modified:   dwarfextract/testc.base
	modified:   dwgena/test1.base.gz
	modified:   dwgena/test2.base.gz
	modified:   dwgena/test3.base.gz
	modified:   dwgena/test4.base.gz
	modified:   dwgena/test5.base.gz
	modified:   dwgena/test6.base.gz
	modified:   dwgena/test7.base.gz
	modified:   dwgena/test8.base.gz
	modified:   dwgena/test9.base.gz
	modified:   examplesloclist

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2020-06-26 David Anderson
+    * DWARFTEST.sh: Using  diff option
+      --speed-large-files 
+      to hopefully speed up diffing the kind of difference we see.
+    * baseline updates
+      baddie1/*.base
+      debugfission/*.base.gz
+      dwarfextract/*.base
+      dwgena/test*.base.gz
+    * dwarfextract/runtest.sh: Now the test script
+      reveals, on FAIL, how to rerun the script.
 2020-06-17 David Anderson
     * moya2/*: New testcase for DWARF5 support.
 2020-03-18 David Anderson
