Now a test with a new gdb_index 	modified:   DWARFTEST.sh
Documents the new gdb_index.
	modified:   dwarf4/README
This has the new object.
    new file:   dwarf4/ddg4.5dwarf-4-gdb-index
This uses a relocation not seen before on DWARF.
	new file:   mustacchi/relgotpc.o

--- a/dwarf4/README
+++ b/dwarf4/README
@@ -29,4 +29,15 @@ The error "dwarfdump NO ENTRY:  pubtype dwarf_offdie : die offset does not refer
 
 --------------------
 
+See https://sourceware.org/gdb/onlinedocs/gdb/Index-Section-Format.html#Index-Section-Format
+
+ddg4.5dwarf-4-gdb-index was created from ddg4.5dwarf-4
+by 
+   cp ddg4.5dwarf-4 ddg4.5dwarf-4-gdb-index
+   gdb-add-index ddg4.5dwarf-4-gdb-index
+on 2 July 2020 by DavidAnderson.
+This created a version 8 gdbindex.
+
+
+
 
